--- a/clusters/localhost/prepare/kustomization.yaml
+++ b/clusters/localhost/prepare/kustomization.yaml
@@ -8,3 +8,5 @@ resources:
 
 patches:
 - path: patches/ufe-controller.service.yaml    # úprava služby ufe-controllers
+components:
+ - ../../../components/version-developers
