--- a/apps/mja-ambulance-ufe/webcomponent.yaml
+++ b/apps/mja-ambulance-ufe/webcomponent.yaml
@@ -7,7 +7,7 @@ spec:
                      # module web komponentu pre tento mikroFE
                      # - umiestnený v namespace wac-hospital
   navigation:
-    - element: mja-ambulance-wl-list    # element, ktorý bude vložený na stránku
+     - element: mja-ambulance-wl-app    # element, ktorý bude vložený na stránku
                                     # pri navigácii na zoznam čakajúcich
       path: mja-ambulance-wl      # cesta, ktora sa zobrazi v address bare v prehliadaci, ked bude tento mikroFE aktívny
       title: Zoznam čakajúcich mja      # názov mikro aplikácie
