--- a/components/version-developers/kustomization.yaml
+++ b/components/version-developers/kustomization.yaml
@@ -1,6 +1,9 @@
 apiVersion: kustomize.config.k8s.io/v1alpha1
 kind: Component
 images:
+- name: javorkam/ambulance-wl-webapi
+  newName: javorkam/ambulance-wl-webapi # {"$imagepolicy":  "wac-hospital:ambulance-webapi:name"}
+  newTag: main # {"$imagepolicy": "wac-hospital:ambulance-webapi:tag"}
 - name: javorkam/ambulance-ufe
   newName: javorkam/ambulance-ufe # {"$imagepolicy":  "wac-hospital:ambulance-ufe:name"}
   newTag: main.20240304.1051 # {"$imagepolicy": "wac-hospital:ambulance-ufe:tag"}
