--- a/clusters/wac-aks/install/kustomization.yaml
+++ b/clusters/wac-aks/install/kustomization.yaml
@@ -9,7 +9,7 @@ commonLabels:
 
 resources:
  - ../../../apps/mja-ambulance-ufe
-
+ - ../../../apps/mja-ambulance-webapi
 
 components:
  - ../../../components/version-release
