--- a/apps/mja-ambulance-ufe/webcomponent.yaml
+++ b/apps/mja-ambulance-ufe/webcomponent.yaml
@@ -11,7 +11,7 @@ spec:
                                     # pri navigácii na zoznam čakajúcich
       attributes:
         - name: api-base
-          value: http://localhost:30081/api
+          value: /mja-api
 
         - name: ambulance-id
           value: bobulova
