--- a/infrastructure/envoy-gateway/gateway.yaml
+++ b/infrastructure/envoy-gateway/gateway.yaml
@@ -36,3 +36,21 @@ spec:
       certificateRefs:
       - kind: Secret
         name: wac-hospital-tls
+  - hostname: wac-hospital.loc
+    name: fqdn
+    protocol: HTTPS
+    port: 443
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - kind: Secret
+        name: wac-hospital-tls
+  - hostname: localhost
+    name: https-localhost
+    protocol: HTTPS
+    port: 443
+    tls:
+      mode: Terminate
+      certificateRefs:
+      - kind: Secret
+        name: wac-hospital-tls
