--- a/infrastructure/envoy-gateway/kustomization.yaml
+++ b/infrastructure/envoy-gateway/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - https://github.com/envoyproxy/gateway/releases/download/latest/install.yaml
 - gateway-class.yaml
 - gateway.yaml
+- envoy-patch-policy.yaml
 
 configMapGenerator:
   - name: envoy-gateway-config
