Add fluentbit and opensearch

--- a/clusters/localhost/install/kustomization.yaml
+++ b/clusters/localhost/install/kustomization.yaml
@@ -13,6 +13,7 @@ resources:
  - ../../../apps/mja-ambulance-webapi
  - ../../../apps/mongo-express
  - ../../../apps/http-echo
+  - ../../../apps/observability-webc
 
 
 components:
