--- a/apps/observability-webc/kustomization.yaml
+++ b/apps/observability-webc/kustomization.yaml
@@ -4,5 +4,7 @@ kind: Kustomization
 namespace: wac-hospital
 
 resources:
-- monitoring-opensearch.webcomponent.yaml
-- monitoring-opensearch.http-route.yaml
+ - monitoring-opensearch.webcomponent.yaml
+ - monitoring-opensearch.http-route.yaml
+ - grafana.webcomponent.yaml
+ - grafana.http-route.yaml
